# sphinx-astropy

./: .gitignore  .mailmap  CHANGES.md  CHANGES.rst  LICENSE.rst  MANIFEST.in  README.rst  conftest.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: release.yml
.github/workflows/: publish.yml  python-tests.yml  rc-tests.yml  update-changelog.yaml
docs/: using-the-example-extension.rst
sphinx_astropy/: __init__.py  conf.py
sphinx_astropy/conf/: __init__.py  v1.py  v2.py  v3.py
sphinx_astropy/conf/v3/: __init__.py
sphinx_astropy/conf/v3/theme/: __init__.py  theme.toml
sphinx_astropy/conf/v3/theme/static/css/: astropy.css
sphinx_astropy/ext/: changelog_links.py  edit_on_github.py  generate_config.py  intersphinx_toggle.py  missing_static.py
sphinx_astropy/ext/example/: __init__.py  examplepages.py  indexpages.py  marker.py  postprocessor.py  preprocessor.py  templates.py  utils.py
sphinx_astropy/ext/example/templates/astropy_example/: examplepage.rst  landingpage.rst  tagpage.rst
sphinx_astropy/tests/: conftest.py  test_conf.py  test_conf_v2.py  test_conf_v3.py  test_example.py
sphinx_astropy/tests/cases/test-example-gallery/: conf.py  example-marker.rst  example_func.rst  includes.rst  substitutions.rst
sphinx_astropy/tests/cases/test-example-gallery-disabled/: page.rst
sphinx_astropy/tests/cases/test-example-gallery-duplicates/: conf.py  examples.rst
sphinx_astropy/tests/cases/test-example-gallery/_includes/: hello.py
sphinx_astropy/tests/example_module/: example.py
sphinx_astropy/tests/roots/test-example-gallery/: conf.py  example-marker.rst  images.rst  includes.rst  index.rst  links-demo-1.rst  ref-targets.rst
sphinx_astropy/tests/roots/test-example-gallery-disabled/: conf.py  index.rst
sphinx_astropy/tests/roots/test-example-gallery-duplicates/: conf.py  duplicate-examples.rst  index.rst
sphinx_astropy/tests/roots/test-example-gallery/_includes/: _sample.rst
