[metadata]
name = sphinx-astropy
version = attr:sphinx_astropy.__version__
url = https://www.astropy.org
author = The Astropy Developers
author_email = astropy.team@gmail.com
classifiers =
	Intended Audience :: Developers
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	License :: OSI Approved :: BSD License
license = BSD
description = Sphinx extensions and configuration specific to the Astropy project
long_description = file: README.rst

[bdist_wheel]
universal = 1

[options]
zip_safe = False
packages = find:
install_requires =
	sphinx>=1.7
	astropy-sphinx-theme
	numpydoc
	sphinx-automodapi
	sphinx-gallery
	pillow

[options.package_data]
sphinx_astropy = local/*
