[metadata]
name = sphinx-astropy
url = https://github.com/astropy/sphinx-astropy
author = The Astropy Developers
author_email = astropy.team@gmail.com
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
license = BSD
description = Sphinx extensions and configuration specific to the Astropy project
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
    packaging
    sphinx>=3.0.0
    astropy-sphinx-theme
    numpydoc
    sphinx-automodapi
    sphinx-gallery
    sphinxcontrib-jquery
    pillow
    pytest-doctestplus>=0.11

[options.extras_require]
v2 =
    pydata-sphinx-theme
    sphinx-copybutton
all = astropy
tests = pytest

[options.package_data]
sphinx_astropy = local/*
